# TNBUS

./: .gitignore  INGESTION_SERVICE_SUMMARY.md  Makefile  README.md  docker-compose.yml
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20241125_0001_initial_schema.py
services/api/app/: main.py
services/api/app/core/: __init__.py  config.py  logging.py
services/api/app/db/: __init__.py  base.py  session.py
services/api/app/models/: __init__.py  bus.py  prediction.py  route.py  telemetry.py  traffic_snapshot.py
services/api/app/routers/: __init__.py  health.py  version.py
services/api/app/schemas/: __init__.py  health.py  version.py
services/api/app/services/: system.py
services/api/scripts/: seed_data.py
services/api/tests/: test_health.py  test_version.py
services/ingestion/: DELIVERABLES.md  Dockerfile  README.md  SETUP.md  celeryconfig.py  pyproject.toml  quickstart.sh
services/ingestion/app/: __init__.py  main.py
services/ingestion/app/adapters/: __init__.py  gps_adapter.py  traffic_adapter.py
services/ingestion/app/core/: config.py  logging.py
services/ingestion/app/db/: __init__.py  session.py
services/ingestion/app/routers/: __init__.py  gps_webhook.py  health.py
services/ingestion/app/schemas/: __init__.py  gps.py  traffic.py
services/ingestion/app/services/: __init__.py  persistence.py
services/ingestion/app/tasks/: __init__.py  traffic_poller.py
services/ingestion/simulators/: gps_simulator.py  traffic_api_mock.py
services/ingestion/tests/: __init__.py  test_health.py  test_schemas.py
